styling and content edits to all pages; updated logo

--- a/events.html
+++ b/events.html
@@ -25,7 +25,7 @@
 <body>
 <!-- Navigation -->
   <div class="container">
-    <img class="logo" src="./images/LOGO.png">
+    <a href="index.html"><img class="logo" src="./images/LOGO.png"></a>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
@@ -80,6 +80,9 @@
     <img class="banner-image" src="./images/events.png">
   </div>
 
+  <div class="info">
+    <h2>Here's a list of all the events happening this month in Tri Delta and the Greek community!</h2>
+  </div>
     <!-- Page Content -->
   <div class="container events-page w3-mobile">
       <div class="container-fluid events-spacing">
@@ -168,7 +171,9 @@
           <a href="https://www.facebook.com/ucsdtridelta/">
             <i class="fab ho fa-facebook-f"></i>
           </a>
-          <i class="fab ho fa-pinterest-p"></i>
+          <a href="https://www.pinterest.com/DDDatUCSD/">
+            <i class="fab ho fa-pinterest-p"></i>
+          </a>
           <a href="http://ucsdtridelta.tumblr.com/">
             <i class="fab ho fa-tumblr"></i>
           </a>
