--- a/hello.html
+++ b/hello.html
@@ -56,7 +56,7 @@
 <body>
 <!-- Navigation -->
   <div class="container">
-    <img class="logo" src="./images/LOGO.png">
+    <a href="index.html"><img class="logo" src="./images/LOGO.png"></a>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
