--- a/recruitment.html
+++ b/recruitment.html
@@ -266,7 +266,9 @@ href="https://enroll.icsrecruiter.com/pan/UNCASD#/enroll/enrollment-disclaimer">
           <a href="https://www.facebook.com/ucsdtridelta/">
             <i class="fab ho fa-facebook-f"></i>
           </a>
-          <i class="fab ho fa-pinterest-p"></i>
+          <a href="https://www.pinterest.com/DDDatUCSD/">
+            <i class="fab ho fa-pinterest-p"></i>
+          </a>
           <a href="http://ucsdtridelta.tumblr.com/">
             <i class="fab ho fa-tumblr"></i>
           </a>
