--- a/sisterhood.html
+++ b/sisterhood.html
@@ -107,6 +107,7 @@
         <div class="col-md-8">
             <div class="sister-title"><h1>Sisterhood</h1></div>
           <div class="sister-body">
+            <b>Make lifelong friends. </b>
             Having a sisterhood as tight-knit as ours not only serves as an amazing support system, but also creates memories that will last a lifetime. Our annual sisterhood events include sisterhood retreats, Big/Little reveal, weekly sisterhood events, and much more! We have various 'Deltas Only' events throughout the year to strengthen our sisterhood and explore San Diego! Some events going to a Padres game, photoshoots at pumpkin patches, haunted hayrides, and beach bonfires.
            <br>
          </div><!--end sister-body-->
@@ -159,16 +160,18 @@
 
   <div class="container sister-details">
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-md-8 order-md-12">
         <div class="sister-title"><h1>Formals</h1></div>
         <div class="sister-body">
-         Twice a year, our chapter decides to go on a mini get-away with all of our sisters! The first retreat of the year happens right before school starts. This retreat allows for our returning members to bond and reconnect with each as we prepare for formal fall recruitment. 
+          <b>Dance the night away. </b>
+         Our chapter hosts two Formal events during the academic year. In October we host Presents, our fall semi-formal to officially present our fall and spring pledge classes to the chapter. It's a great way to kick of the school year and everyone has so much fun! The location of formals are always kept secret from the chapter, so we spend the entire ride their guessing where it'll be.  
        <br><br>
-       The second retreat takes place during winter or spring quarer. This retreat provides a great opportunity for older Tri Deltas to get to know the new members and share funny stories as they reminisce on their past. Retreats are the best way for our members to strengthen our sisterhood because it's just one big sleepover. We go on hikes, play games, and eat the junk food that we can!
+       <b>Strengthening our sisterhood. </b>
+       Our Spring Formal is a great way to dress up and have a fun time with our sisters! Last year we had formal at the U.S.S. Midway in downtown San Diego. The night featured an awesome DJ, photo booth, and hilarious superlatives. Formal was the perfect way to celebrate the end of another amazing year together!
      </div>
    </div><!--end col-md-7-->
    <!-- The slideshow -->
-   <div class="col-md-4">
+   <div class="col-md-4 order-md-1">
             <div id="demo2" class="carousel slide" data-ride="carousel">
               <!-- Indicators -->
               <ul class="carousel-indicators">
@@ -291,7 +294,9 @@
           <a href="https://www.facebook.com/ucsdtridelta/">
             <i class="fab ho fa-facebook-f"></i>
           </a>
-          <i class="fab ho fa-pinterest-p"></i>
+          <a href="https://www.pinterest.com/DDDatUCSD/">
+            <i class="fab ho fa-pinterest-p"></i>
+          </a>
           <a href="http://ucsdtridelta.tumblr.com/">
             <i class="fab ho fa-tumblr"></i>
           </a>
