--- a/FAQ.html
+++ b/FAQ.html
@@ -35,12 +35,12 @@
     font-weight:bold;
     font-family:Quicksand;
       color: #FFBFB7;
+      margin-top:6%;
 
   }
   .answer{
     margin-left:7%;
     margin-right:7%;
-    margin-top:5%;
   }
   .FAQ{
     margin-left:2em;
@@ -58,7 +58,7 @@
 <body>
 <!-- Navigation -->
   <div class="container">
-    <img class="logo" src="./images/LOGO.png">
+    <a href="index.html"><img class="logo" src="./images/LOGO.png"></a>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
@@ -112,7 +112,7 @@
 Frequently Asked Questions
 </p>
 
-<br>
+
 
     <div class="section-margin">
         <p class="question">Why should I join a sorority?</p>
@@ -173,7 +173,9 @@ Frequently Asked Questions
           <a href="https://www.facebook.com/ucsdtridelta/">
             <i class="fab ho fa-facebook-f"></i>
           </a>
-          <i class="fab ho fa-pinterest-p"></i>
+          <a href="https://www.pinterest.com/DDDatUCSD/">
+            <i class="fab ho fa-pinterest-p"></i>
+          </a>
           <a href="http://ucsdtridelta.tumblr.com/">
             <i class="fab ho fa-tumblr"></i>
           </a>
