--- a/leadership.html
+++ b/leadership.html
@@ -43,7 +43,7 @@
   <!-- Navigation -->
 <!-- Navigation -->
   <div class="container">
-    <img class="logo" src="./images/LOGO.png">
+    <a href="index.html"><img class="logo" src="./images/LOGO.png"></a>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
@@ -220,7 +220,9 @@
           <a href="https://www.facebook.com/ucsdtridelta/">
             <i class="fab ho fa-facebook-f"></i>
           </a>
-          <i class="fab ho fa-pinterest-p"></i>
+          <a href="https://www.pinterest.com/DDDatUCSD/">
+            <i class="fab ho fa-pinterest-p"></i>
+          </a>
           <a href="http://ucsdtridelta.tumblr.com/">
             <i class="fab ho fa-tumblr"></i>
           </a>
