--- a/philanthropy.html
+++ b/philanthropy.html
@@ -26,7 +26,7 @@
 <body>
 <!-- Navigation -->
   <div class="container">
-    <img class="logo" src="./images/LOGO.png">
+    <a href="index.html"><img class="logo" src="./images/LOGO.png"></a>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
@@ -77,7 +77,7 @@
     <img class="banner-image" src="./images/philanthropy/philbanner.png">
   </div>
 
-<p style="color:grey;font-family:Quicksand;font-size:2.5em;margin-top:2em;margin-bottom:2em;text-align:center"> <i>The glory of life is to give, not to be given; to love, not to be loved; to serve, not to be served.</i><p>
+<p style="color:grey;font-family:Quicksand;font-size:2.5em;margin-top:2em;margin-bottom:2em;text-align:center"> <i>Giving Back to Our Community</i><p>
 
         <div class="row" style="margin-bottom:5%">
           <div class="col-lg-8">
@@ -244,7 +244,9 @@
           <a href="https://www.facebook.com/ucsdtridelta/">
             <i class="fab ho fa-facebook-f"></i>
           </a>
-          <i class="fab ho fa-pinterest-p"></i>
+          <a href="https://www.pinterest.com/DDDatUCSD/">
+            <i class="fab ho fa-pinterest-p"></i>
+          </a>
           <a href="http://ucsdtridelta.tumblr.com/">
             <i class="fab ho fa-tumblr"></i>
           </a>
