changes to aboutus page

--- a/aboutus.html
+++ b/aboutus.html
@@ -38,7 +38,7 @@
 
 <!-- Navigation -->
   <div class="container">
-    <img class="logo" src="./images/LOGO.png">
+    <a href="index.html"><img class="logo" src="./images/LOGO.png"></a>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
@@ -118,6 +118,7 @@
     </div>
   </div>
 
+<hr class="style6">
     <!-- Row 2 -->
     <div class="w3-cell-row w3-padding-48 w3-mobile">
 
@@ -137,6 +138,7 @@
     </div>
   </div>
 
+<hr class="style6">
     <!-- Row 2 -->
     <div class="w3-cell-row w3-padding-48 w3-mobile">
 
@@ -152,6 +154,8 @@
          <p class="paragraph-style" style= "padding-top:20px">Tri Delta was founded by women for women. Ours is a remarkable story, and Tri Delta is proud to share a sisterhood created by brave, bold and kind women who were looking to be themselves and belong to something bigger – something distinctive, something dynamic and something worthy of the best in them. Although there were three women's groups represented at Boston University in 1888, seniors Sarah Ida Shaw and Eleanor Dorcas Pond saw a need for a different organization that would <b>"be kind alike to all and think more of the girl's inner self and character than of her personal appearance."</b></p>
      </div>
    </div>
+
+   <hr class="style6">
     <div class="w3-center w3-mobile">
       <h1 class="w3-center title-padding" style="padding-bottom:80px"> Symbols & Emblems </h1> 
 
@@ -246,7 +250,9 @@ function showDivs(n) {
           <a href="https://www.facebook.com/ucsdtridelta/">
             <i class="fab ho fa-facebook-f"></i>
           </a>
-          <i class="fab ho fa-pinterest-p"></i>
+          <a href="https://www.pinterest.com/DDDatUCSD/">
+            <i class="fab ho fa-pinterest-p"></i>
+          </a>
           <a href="http://ucsdtridelta.tumblr.com/">
             <i class="fab ho fa-tumblr"></i>
           </a>
