--- a/FAQ.html
+++ b/FAQ.html
@@ -133,7 +133,7 @@ Frequently Asked Questions
         <p class="question">How much of a time committment is being in a sorority?</p>
         <p class="answer">Participating in a sorority is like participating in any co-curricular activity; it requires a time investment. Students in the Panhellenic Community at UCSD have the opportunity for a well-rounded college experience that involves academic work, campus and service involvement, networking, and social events. You choose your level of involvement, but what you get out of being in a sorority is what you put in.</p>
 
-        <p class="question">Are there academic requirements for joining a sorority?</p><
+        <p class="question">Are there academic requirements for joining a sorority?</p>
         <p class="answer">In order to go through recruitment, you must be in good academic standing with the university. However, each Panhellenic sorority does choose its own individual scholarly requirements. Panhellenic sororities put a great amount of emphasis on scholarship in addition to other great things they have to offer.</p>
 
         <p class="question">What are the financial requirements for joining a sorority?</p>
