spacing changes - sisterhood

--- a/sisterhood.html
+++ b/sisterhood.html
@@ -154,7 +154,7 @@
     </div>
   </div>
       
-    <hr class="style6">
+    <hr class="style6"><br><br>
 
 
   <div class="container sister-details">
@@ -207,7 +207,7 @@
 </div><!--end row-->
 </div> <!--end container-->
       
-     <hr class="style6">
+     <hr class="style6"><br><br>
 
 <div class="container sister-details">
   <div class="row">
