--- a/FAQ.html
+++ b/FAQ.html
@@ -35,12 +35,12 @@
     font-weight:bold;
     font-family:Quicksand;
       color: #FFBFB7;
+      margin-top:6%;
 
   }
   .answer{
     margin-left:7%;
     margin-right:7%;
-    margin-top:5%;
   }
   .FAQ{
     margin-left:2em;
@@ -58,7 +58,7 @@
 <body>
 <!-- Navigation -->
   <div class="container">
-    <img class="logo" src="./images/LOGO.png">
+    <a href="index.html"><img class="logo" src="./images/LOGO.png"></a>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
@@ -112,7 +112,7 @@
 Frequently Asked Questions
 </p>
 
-<br>
+
 
     <div class="section-margin">
         <p class="question">Why should I join a sorority?</p>
@@ -133,7 +133,7 @@ Frequently Asked Questions
         <p class="question">How much of a time committment is being in a sorority?</p>
         <p class="answer">Participating in a sorority is like participating in any co-curricular activity; it requires a time investment. Students in the Panhellenic Community at UCSD have the opportunity for a well-rounded college experience that involves academic work, campus and service involvement, networking, and social events. You choose your level of involvement, but what you get out of being in a sorority is what you put in.</p>
 
-        <p class="question">Are there academic requirements for joining a sorority?</p><
+        <p class="question">Are there academic requirements for joining a sorority?</p>
         <p class="answer">In order to go through recruitment, you must be in good academic standing with the university. However, each Panhellenic sorority does choose its own individual scholarly requirements. Panhellenic sororities put a great amount of emphasis on scholarship in addition to other great things they have to offer.</p>
 
         <p class="question">What are the financial requirements for joining a sorority?</p>
@@ -173,7 +173,9 @@ Frequently Asked Questions
           <a href="https://www.facebook.com/ucsdtridelta/">
             <i class="fab ho fa-facebook-f"></i>
           </a>
-          <i class="fab ho fa-pinterest-p"></i>
+          <a href="https://www.pinterest.com/DDDatUCSD/">
+            <i class="fab ho fa-pinterest-p"></i>
+          </a>
           <a href="http://ucsdtridelta.tumblr.com/">
             <i class="fab ho fa-tumblr"></i>
           </a>
