fixed styling of all pages to be consistent; added call to action buttons on homepage; edited content

--- a/FAQ.html
+++ b/FAQ.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link href="https://fonts.googleapis.com/css?family=Handlee|Euphoria+Script" rel="stylesheet" type='text/css'>
   <!-- Custom styles for this template -->
-  <link href="philanthropy.css" rel="stylesheet">
-  <link href="index.css" rel="stylesheet">
+  <link href="./css/philanthropy.css" rel="stylesheet">
+  <link href="./css/index.css" rel="stylesheet">
 
   <style>
   .title {
@@ -80,13 +80,13 @@
                       </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="recruitment.html">Recruitment</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="philanthropy.html">Philanthropy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="recruitment.html">Recruitment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="events.html">Events</a>
