--- a/events.html
+++ b/events.html
@@ -16,8 +16,8 @@
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link href="https://fonts.googleapis.com/css?family=Handlee|Euphoria+Script" rel="stylesheet" type='text/css'>
   <!-- Custom styles for this template -->
-  <link href="events.css" rel="stylesheet">
-  <link href="index.css" rel="stylesheet">
+  <link href="./css/index.css" rel="stylesheet">
+  <link href="./css/events.css" rel="stylesheet">
 
 </head>
 
@@ -48,14 +48,15 @@
                    <!--  <li class="nav-item">
                         <a class="nav-link" href="aboutus.html">About Us</a>
                     </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="recruitment.html">Recruitment</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="philanthropy.html">Philanthropy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="recruitment.html">Recruitment</a>
                     </li>
 
                     <!-- <li class="nav-item">
@@ -220,7 +221,6 @@
 <!-- Social Media Icons-->
 <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
-<script type="text/javascript" src="slick/slick.min.js"></script>
 
 
 </body>
