--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link href="https://fonts.googleapis.com/css?family=Handlee|Euphoria+Script" rel="stylesheet" type='text/css'>
   <!-- Custom styles for this template -->
-  <link href="index.css" rel="stylesheet">
+  <link href="./css/index.css" rel="stylesheet">
 
 </head>
 
@@ -48,14 +48,15 @@
                    <!--  <li class="nav-item">
                         <a class="nav-link" href="aboutus.html">About Us</a>
                     </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="recruitment.html">Recruitment</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="philanthropy.html">Philanthropy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="recruitment.html">Recruitment</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="leadership.html">Leadership</a>
@@ -85,6 +86,18 @@
     </div>
 
     Tri Delta is an assembly of women with shared values where you can be yourself and belong to something bigger. We are <b>brave</b>, <b>bold</b> and <b>kind</b>. We are passionate about serving others, committed to becoming the best version of ourselves and dedicated to helping women <b>Live</b>, <b>Learn</b> and <b>Lead</b> – with Purpose – for a lifetime.
+  </div>
+
+  <!---CALL TO ACTION-->
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 button-content">
+        <a href="aboutus.html" class="button">Learn More About Our Chapter!</a>
+      </div>
+      <div class="col-sm-6 button-content">
+        <a href="recruitment.html" class="button">Learn More About Recruitment!</a>
+      </div>
+    </div>
   </div>
 
   <!-- IMAGE GALLERY -->
