--- a/leadership.html
+++ b/leadership.html
@@ -17,7 +17,7 @@
 
 
   <!-- Custom styles for this template -->
-  <link href="leadership.css" rel="stylesheet">
+  <link href="./css/leadership.css" rel="stylesheet">
 
 
   <!-- Fonts -->
@@ -66,14 +66,15 @@
                    <!--  <li class="nav-item">
                         <a class="nav-link" href="aboutus.html">About Us</a>
                     </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="recruitment.html">Recruitment</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="philanthropy.html">Philanthropy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="recruitment.html">Recruitment</a>
                     </li>
 <!--
                      <li class="nav-item active">
@@ -102,6 +103,9 @@
   <div class="leadershippage">
     <<div class="container">-->
 
+    <div class="execboard">
+      Executive Board
+    </div>
     <!-- Row 1 -->
     <div class="w3-cell-row w3-padding-64 row-mobile">
 
@@ -123,7 +127,7 @@
         <div class="w3-card-4 w3-hover-shadow">
           <img src="images/leadership/test-3.JPG" class = "photo-padding" style = "width:100%" alt="president">
           <div class="w3-container w3-center nametag">
-            <h1> Elise Sadsworth </h1>
+            <h1> Elise Wadsworth </h1>
             <p class = "second-line"> VP Administration </p>
           </div>
         </div>
@@ -167,7 +171,7 @@
         <div class="w3-card-4">
           <img src="images/leadership/test-5.JPG" class = "photo-padding" style = "width:100%" alt="president">
           <div class="w3-container w3-center nametag">
-            <h1> Dayondra </h1>
+            <h1> Dayondra Duffy</h1>
             <p class = "second-line"> VP Finance </p>
           </div>
         </div>
