--- a/philanthropy.html
+++ b/philanthropy.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link href="https://fonts.googleapis.com/css?family=Handlee|Euphoria+Script" rel="stylesheet" type='text/css'>
   <!-- Custom styles for this template -->
-  <link href="philanthropy.css" rel="stylesheet">
-  <link href="index.css" rel="stylesheet">
+  <link href="./css/philanthropy.css" rel="stylesheet">
+  <link href="./css/index.css" rel="stylesheet">
 
 </head>
 
@@ -48,14 +48,15 @@
                       </div>
                     </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="recruitment.html">Recruitment</a>
-                    </li>
+                    
                     <li class="nav-item active">
                         <a class="nav-link" href="philanthropy.html">Philanthropy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="recruitment.html">Recruitment</a>
                     </li>
 
                     <li class="nav-item">
@@ -77,16 +78,18 @@
     <img class="banner-image" src="./images/philanthropy/philbanner.png">
   </div>
 
-<p style="color:grey;font-family:Quicksand;font-size:2.5em;margin-top:2em;margin-bottom:2em;text-align:center"> <i>Giving Back to Our Community</i><p>
+  <p class="quote"> 
+    Giving Back to Our Community
+  </p>
 
-        <div class="row" style="margin-bottom:5%">
+        <div class="row events-1">
           <div class="col-lg-8">
             <div class = "title-style">
-              <b><i>St. Jude Children's Research Hospital</i></b>
+              <b>St. Jude Children's Research Hospital</b>
             </div>
             <div class = "body-style">
               <b>Do something that matters.</b>
-              Since the early 1970s Tri Delta’s chosen philanthropy has been children’s cancer charities. In 1999, Tri Delta formed a national philanthropic partnership with St. Jude Children’s Research Hospital to support their mission of finding cures and saving children.
+              Since the early 1970s Tri Delta’s chosen philanthropy has been children’s cancer charities. In 1999, Tri Delta formed a national philanthropic partnership with St. Jude Children’s Research Hospital to support their mission of finding cures and saving children. In July 2014, Tri Delta made the largest single fundraising commitment by a St. Jude partner in the hospital's history–pledging <b>$60 million in 10 years!</b> Because of this commitment, Tri Delta has received prominent recognition on the St. Jude campus with the naming of the short-term housing facility, Tri Delta Place.
             </div>
           </div>
           <div class ="col-lg-4">
@@ -122,14 +125,14 @@
 
         <hr class="style">
 
-        <div class="row" style="margin-bottom:5%;margin-top:5%">
+        <div class="row events">
           <div class="col-lg-8 order-md-12">
             <div class = "title-style"> 
-              <b><i>Delta Idol</i></b>
+              <b>Delta Idol</b>
             </div>
             <div class = "body-style">
               <b>Love to sing?</b>
-              Every year, we host a a fun talent show, where all the sororities and fraternities perform in a singing competition! This campaign is our most successful event across the nation and raises the most amount of money for St. Jude.
+              Every year, we host a a fun talent show called Delta Idol, where all the sororities and fraternities on campus partciapte and perform in a singing competition! This competition is our main and most successful philanthropy event of the school year. During the week of the event, members of greek life come vist our booth on Library Walk to learn more about St. Jude and participate in fun activities, like Pie a Tri! 
             </div>
           </div>
           <div class ="col-lg-4 order-md-1">
@@ -170,14 +173,14 @@
 
 
         <div class = "philanthropy-section-ext">
-          <div class="row" style="margin-top:5%;margin-bottom:5%">
+          <div class="row events">
             <div class="col-lg-8">
               <div class = "title-style">
-                <b><i>External Philanthropy</i></b>
+                <b>External Philanthropy</b>
               </div>
               <div class = "body-style">
                 <b>Give back to your community.</b>
-                We take as much pride in our support of other fraternities and sororities as we do with our own. As sisters of TriDelta, we participate in external events hosted by other members of the Greek community to help raise money and awareness for their organizations.
+                We take as much pride in our support of other fraternities' and sororities' philanthropies as we do with our own. As sisters of Tri Delta, we participate in external philanthropies hosted by other members of the Greek community to help raise money and awareness for their causes. This is one of the many ways our members are able to be active in the Greek community and make new friends in other chapters. Some events include a dancing competition hosted by Sigma Kappa and a powderpuff competition hosted my Sigma Alpha Epsilon. 
               </div>
             </div>
             <!-- CAROUSEL STARTS HERE -->
