--- a/recruitment.html
+++ b/recruitment.html
@@ -13,12 +13,11 @@
  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-  <link href="https://fonts.googleapis.com/css?family=Handlee|Euphoria+Script" rel="stylesheet" type='text/css'>
+
   <!-- Custom styles for this template -->
-  <link href="philanthropy.css" rel="stylesheet">
-  <link href="index.css" rel="stylesheet">
+  <link href="./css/index.css" rel="stylesheet">
+  <link href="./css/recruitment.css" rel="stylesheet">
+  
 
 </head>
 
@@ -26,7 +25,7 @@
 <body>
 <!-- Navigation -->
   <div class="container">
-    <img class="logo" src="./images/LOGO.png">
+    <a href="index.html"><img class="logo" src="./images/LOGO.png"></a>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
@@ -47,18 +46,20 @@
                         <a class="dropdown-item" href="leadership.html">Leadership</a>
                       </div>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="recruitment.html">Recruitment</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="philanthropy.html">Philanthropy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="recruitment.html">Recruitment</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="events.html">Events</a>
                     </li>
+
                     <li class ="nav-item">
                       <a class = "nav-link" href="FAQ.html">FAQ</a>
                     </li>
@@ -75,30 +76,19 @@
 
     <!-- Page Content -->
 
-<p style="color:grey;font-family:Quicksand;font-size:2.5em;margin-top:2em;margin-bottom:2em;text-align:center"> <i>Find your sisters for life</i><p>
+<p style="color:grey;font-family:Quicksand;font-size:2.5em;margin-top:2em;margin-bottom:2em;text-align:center; line-height:1.6;"> <i>Find your sisters for life</i><p>
 
         <div class="row" style="margin-bottom:5%">
           <div class="col-lg-8">
             <div class = "title-style">
-              <b><i>Formal Recruitment</i></b>
+              <b>Formal Recruitment</b>
             </div>
             <div class = "body-style">
-            <b>Why Tri Delta?</b>
-            Tri Delta offers you a lifelong bond of friendship with women
-            who are share similar aspirations and goals.
-            <br><br>
-            In Tri Delta, you are a unique and valuable part of a
-            connected whole. We don't want you to come here and be like
-            us. <b>We want you to come here and be you.</b>
-            <br><br>
-            Register for Fall Recruitment using the link below!
-            <br><br>
-            <a
-href="https://enroll.icsrecruiter.com/pan/UNCASD#/enroll/enrollment-disclaimer">
-            <div style="color: #0000EE">
-            https://enroll.icsrecruiter.com/pan/UNCASD#/enroll/enrollment-disclaimer
-            </div>
-            </a>
+              <b>Why Tri Delta?</b>
+              Tri Delta offers you a lifelong bond of friendship with women who are share similar aspirations and goals. In Tri Delta, you are a unique and valuable part of a connected whole. We don't want you to come here and be like us. <b>We want you to come here and be you.</b>
+              <br><br>
+              Fall Recruitment regristration opens during the summer. <br>
+              Register for Fall Recruitment using this <a style="color:#FFBFB7;" href="https://enroll.icsrecruiter.com/pan/UNCASD#/enroll/enrollment-disclaimer"> link!</a>
             </div>
           </div>
           <div class ="col-lg-4">
@@ -137,7 +127,7 @@ href="https://enroll.icsrecruiter.com/pan/UNCASD#/enroll/enrollment-disclaimer">
         <div class="row" style="margin-bottom:5%;margin-top:5%">
           <div class="col-lg-8 order-md-12">
             <div class = "title-style"> 
-              <b><i>Current Open Bidding</i></b>
+              <b>Current Open Bidding</b>
             </div>
             <div class = "body-style">
                 <b>Missed Formal Recruitment?</b>
@@ -190,7 +180,7 @@ href="https://enroll.icsrecruiter.com/pan/UNCASD#/enroll/enrollment-disclaimer">
           <div class="row" style="margin-top:5%;margin-bottom:5%">
             <div class="col-lg-8">
               <div class = "title-style">
-                <b><i>Welcoming Our New Members</i></b>
+                <b>Welcoming Our New Members</b>
               </div>
               <div class = "body-style">
             <b>Acceping a bid from Tri Delta was one of the most exciting
