--- a/sisterhood.html
+++ b/sisterhood.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Sisterhood</title>
+  <title>Sorority Life</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Handlee|Euphoria+Script" rel="stylesheet" type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="sisterhood.css" rel="stylesheet">
+  <link href="./css/sisterhood.css" rel="stylesheet">
 
   <style>
   /* Make the image fully responsive */
@@ -56,14 +56,15 @@
                    <!--  <li class="nav-item">
                         <a class="nav-link" href="aboutus.html">About Us</a>
                     </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="recruitment.html">Recruitment</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="philanthropy.html">Philanthropy</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="recruitment.html">Recruitment</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="leadership.html">Leadership</a>
@@ -92,14 +93,7 @@
   <div class="sisterhood-page">
     <div class="container">
         
-        <p style="text-align: center; color:grey;font-family:Quicksand;font-size:2.5em;margin-top:2em;margin-bottom:2em; line-height: 2.5rem;"><i>"Let Us Steadfastly Love One Another"</i></p>
-
-<!--
-      <div class="sister-summary">
-        Having a sisterhood as tight-knit as ours not only serves as an amazing support system, but also creates memories that will last a lifetime. Our annual sisterhood events include sisterhood retreats, Big/Little reveal, weekly sisterhood events, and much more! We have various 'Deltas Only' events throughout the year to strengthen our sisterhood and explore San Diego! Some events going to a Padres game, photoshoots at pumpkin patches, haunted hayrides, and beach bonfires.
-      </div>
--->
-
+        <p class="quote">Let Us Steadfastly Love One Another</p>
 
     </br>
     <div class="container sister-details">
@@ -166,12 +160,11 @@
           <b>Dance the night away. </b>
          Our chapter hosts two Formal events during the academic year. In October we host Presents, our fall semi-formal to officially present our fall and spring pledge classes to the chapter. It's a great way to kick of the school year and everyone has so much fun! The location of formals are always kept secret from the chapter, so we spend the entire ride their guessing where it'll be.  
        <br><br>
-       <b>Strengthening our sisterhood. </b>
        Our Spring Formal is a great way to dress up and have a fun time with our sisters! Last year we had formal at the U.S.S. Midway in downtown San Diego. The night featured an awesome DJ, photo booth, and hilarious superlatives. Formal was the perfect way to celebrate the end of another amazing year together!
      </div>
    </div><!--end col-md-7-->
    <!-- The slideshow -->
-   <div class="col-md-4 order-md-1">
+   <div class="col-md-4 order-md-1 secondcarousel">
             <div id="demo2" class="carousel slide" data-ride="carousel">
               <!-- Indicators -->
               <ul class="carousel-indicators">
@@ -217,6 +210,7 @@
     <div class="col-md-8">
       <div class="sister-title"><h1>Delta Dates</h1></div>
       <div class="sister-body">
+        <b>Strengthening our sisterhood. </b>
         Delta Dates happen throughout the year. Members will ask each other on Delta Dates as way to better know each other and strengthen our sisterhood. Some dates include lunch at the Farmer's Market on campus, coffee at Starbucks, and brunch at the many brunch places in San Diego. These are just moments for everyone to bond and grow our friendship. You can catch sisters studying in Geisel together, watching movies at a sister's house, or exploring San Diego.
       </div>
     </div>
