--- a/aboutus.html
+++ b/aboutus.html
@@ -20,10 +20,7 @@
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
   <!-- Custom styles for this template -->
-  <link href="aboutus.css" rel="stylesheet">
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet" type='text/css'>
+  <link href="./css/aboutus.css" rel="stylesheet">
 
   <!-- Social Media Icons-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -62,13 +59,13 @@
                         <a class="nav-link" href="aboutus.html">About Us</a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="recruitment.html">Recruitment</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="philanthropy.html">Philanthropy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="recruitment.html">Recruitment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="events.html">Events</a>
@@ -157,7 +154,7 @@
 
    <hr class="style6">
     <div class="w3-center w3-mobile">
-      <h1 class="w3-center title-padding" style="padding-bottom:80px"> Symbols & Emblems </h1> 
+      <h1 class="w3-center title-padding-1"> Symbols & Emblems </h1> 
 
     </div>
 
